--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Hazim",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.7.13"
   }
 }
